--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/ index.ts\""
+    "dev": "nodemon --watch src --ext ts --exec \"node --loader ts-node/esm src/ index.ts\"",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -27,12 +28,17 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.5.0",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.4",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
