--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "otp-generator": "^4.0.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
@@ -35,11 +36,15 @@
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
     "@types/supertest": "^6.0.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.3.0"
   }
 }
