--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -32,6 +34,7 @@
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.5.0",
     "@types/nodemailer": "^6.4.15",
     "@types/otp-generator": "^4.0.2",
